--- a/styles/utilities.scss
+++ b/styles/utilities.scss
@@ -61,13 +61,4 @@
     }
   }
 
-  @keyframes nav-height {
-    0% {
-      max-height: 0px !important;
-    }
-
-    100% {
-      max-height: 123px !important;
-    }
-  }
 }
